--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 * {
-    font-family: Rubik, Arial, Helvetica, sans-serif;
+    font-family: 'Varela Round', Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
     float: left;
-    padding: 15px;
+    padding: 30px;
+    /* margin:20px; */
 }
   
 @media only screen and (min-width: 768px) {
@@ -38,6 +39,9 @@
 [class*="col-"] img{
     max-width: 100%;
 }
+.row {
+    padding: 40px 0px 20px 0px;
+}
 .row::after {
     content: "";
     clear: both;
@@ -52,8 +56,21 @@ body {
 h2, h3, h4, h5, h6 {
     font-weight: 400;
 }
-h2 {
+h2, h3, h4 {
     text-align: center;
+}
+h2 {
+    font-size: 42px;
+}
+h3 {
+    font-size: 30px;
+}
+h4 {
+    font-size: 20px;
+}
+p {
+    color: #3a3a3a;
+    font-size: 14px;
 }
 hr {
     margin: auto;
@@ -106,7 +123,7 @@ hr {
 .hero {
     /* padding: 20px; */
     min-height: 400px;
-    color: #ffffff;
+    color: #ffffff !important;
     background-image: url("images/blog07-free-img.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -122,19 +139,60 @@ hr {
 }
 .clients {
     /* padding: 20px; */
-    background-color: #f6f6f6;
+    text-align: center;
 }
 .testimonials {
     /* padding: 20px; */
 }
+.testimonials img {
+    height: 80px;
+}
 .certifications {
-    /* padding: 20px; */
+    text-align: center;
+}
+.certifications img {
+    /* max-width: 260px; */
 }
 .footer {
     /* padding: 20px; */
     background-color: #000000;
-    height: 200px;
 }
 .footer .logo {
     text-align: center;
+}
+.grey {
+    background-color: #f6f6f6;
+}
+.shadow-box {
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 20px;
+}
+i {
+    color:#c73535;
+    font-size: 30px;
+}
+.center {
+    text-align: center;
+}
+.btn-cnt {
+    background-color: #0274be;
+    color: #ffffff;
+    padding: 15px 40px;
+    border-radius: 50px;
+    text-decoration: none;
+    margin-top: 30px;
+}
+.btn-primary {
+    background-color: #c73535;
+    color: #ffffff;
+    padding: 15px 40px;
+    border-radius: 50px;
+    text-decoration: none;
+    margin-top: 30px;
+    text-align: center;
+}
+.padding-bottom {
+    padding-bottom: 30px;
 }
