--- a/styles.css
+++ b/styles.css
@@ -126,12 +126,77 @@ hr {
         max-width: 150px;
     }
 }
+/* Add a red background color to the top navigation */
+.topnav {
+    background-color: #c73535;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    /* float: left; */
+    /* float:right; */
+    /* display: block; */
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  /* .topnav a.active {
+    background-color: #000000;
+    color: white;
+  } */
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
+/* When the screen is less than 767 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 767px) {
+    /* .topnav a:not(:first-child) {display: none;} */
+    .topnav a {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+      background-color: #ffffff;
+    }
+  }
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 767px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+      background-color: #ffffff;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
 .nav {
     background-color: #c73535;
     padding: 10px;
     /* position:sticky;
     position:-webkit-sticky;
     top: 0; */
+}
+@media only screen and (max-width:767px) {
+    .nav {
+        padding: 0px;
+    }
 }
 .nav .menu {
     /* float: right; */
@@ -147,9 +212,12 @@ hr {
     padding: 0;
 }
 .nav a {
-    padding: 20px;
+    /* padding: 20px; */
     /* color: #ffffff; */
     /* display: block; */
+}
+.menu {
+    /* float:right; */
 }
 .menu-item a {
     color: #ffffff;
@@ -223,6 +291,9 @@ hr {
 }
 .footer i {
     padding-right: 10px;
+}
+.footer img {
+    padding: 5px 0px;
 }
 .copyright a {
     color: #c73535
