--- a/styles.css
+++ b/styles.css
@@ -126,12 +126,145 @@ hr {
         max-width: 150px;
     }
 }
+/* Add a red background color to the top navigation */
+.topnav {
+    background-color: #c73535;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    /* float:right; */
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  /* .topnav a.active {
+    background-color: #000000;
+    color: white;
+  } */
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
+/* Dropdown container - needed to position the dropdown content */
+.dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  /* Style the dropdown button to fit inside the topnav */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 10px 16px;
+    background-color: inherit;
+    font-family: 'Varela Round', Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  
+  /* Style the dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Style the links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  /* Add a dark background on topnav links and the dropdown button on hover */
+  .topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
+  }
+  
+  /* Add a grey background to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+/* When the screen is less than 767 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 767px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {display: none;}
+    /* .topnav a, .dropdown .dropbtn {display: none;} */
+    .topnav a.icon {
+      float: right;
+      display: block;
+      background-color: #ffffff;
+    }
+  }
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 767px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+      background-color: #ffffff;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+  }
+.topnav i {
+    font-size: 16px;
+}
+.topnav .fa.fa-caret-down {
+    color:#ffffff;
+}
 .nav {
     background-color: #c73535;
     padding: 10px;
     /* position:sticky;
     position:-webkit-sticky;
     top: 0; */
+}
+@media only screen and (max-width:767px) {
+    .nav {
+        padding: 0px;
+    }
 }
 .nav .menu {
     /* float: right; */
@@ -147,9 +280,12 @@ hr {
     padding: 0;
 }
 .nav a {
-    padding: 20px;
+    /* padding: 20px; */
     /* color: #ffffff; */
     /* display: block; */
+}
+.menu {
+    /* float:right; */
 }
 .menu-item a {
     color: #ffffff;
@@ -223,6 +359,9 @@ hr {
 }
 .footer i {
     padding-right: 10px;
+}
+.footer img {
+    padding: 5px 0px;
 }
 .copyright a {
     color: #c73535
