--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,20 @@
     float: left;
     padding: 20px 0px;
 }
-  
 @media only screen and (min-width: 768px) {
-/* For desktop: */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
     [class*="col-"] {
         padding: 30px;
     }
@@ -33,11 +31,6 @@
         text-align: center;
     }
 }
-/* [class*="col-"] {
-    float: left;
-    padding: 15px;
-  } */
-
 [class*="col-"] img{
     max-width: 100%;
 }
@@ -68,9 +61,6 @@ h2, h3, h4, h5, h6, a, p, li {
     font-family: 'Varela Round', Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
-/* .section h2, .section h3, .section h4 {
-    text-align: center;
-} */
 h2 {
     font-size: 36px;
 }
@@ -90,25 +80,23 @@ h3 {
 h4 {
     font-size: 20px;
 }
-p {
+p, li {
     color: #3a3a3a;
     font-size: 16px;
+    line-height: 1.5rem;
 }
 a {
     text-decoration: none;
-}
-li {
-    font-size: 16px;
-}
-p, li {
-    line-height: 1.5rem;
-}
+}   
 hr {
-    /* margin: auto; */
     width: 50px;
     border-color: #c73535;
     border-width: 2px;
     border-style: solid;
+}
+.container-1080 {
+    max-width: 1080px;
+    margin:auto;
 }
 .container-1000 {
     max-width: 1000px;
@@ -136,10 +124,9 @@ hr {
 .topnav {
     background-color: #c73535;
     overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
+}
+/* Style the links inside the navigation bar */
+.topnav a {
     float: left;
     /* float:right; */
     display: block;
@@ -148,32 +135,28 @@ hr {
     padding: 10px 16px;
     text-decoration: none;
     font-size: 16px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
+}
+/* Change the color of links on hover */
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  /* .topnav a.active {
+}
+/* Add an active class to highlight the current page */
+/* .topnav a.active {
     background-color: #000000;
     color: white;
-  } */
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
+} */
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
     display: none;
-  }
+}
 /* Dropdown container - needed to position the dropdown content */
 .dropdown {
     float: left;
     overflow: hidden;
-  }
-  
-  /* Style the dropdown button to fit inside the topnav */
-  .dropdown .dropbtn {
+} 
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
     font-size: 16px;
     border: none;
     outline: none;
@@ -182,45 +165,39 @@ hr {
     background-color: inherit;
     font-family: 'Varela Round', Arial, Helvetica, sans-serif;
     margin: 0;
-  }
-  
-  /* Style the dropdown content (hidden by default) */
-  .dropdown-content {
+}
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  /* Style the links inside the dropdown */
-  .dropdown-content a {
+}
+/* Style the links inside the dropdown */
+.dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  
-  /* Add a dark background on topnav links and the dropdown button on hover */
-  .topnav a:hover, .dropdown:hover .dropbtn {
+}
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover, .dropdown:hover .dropbtn {
     background-color: #555;
     color: white;
-  }
-  
-  /* Add a grey background to dropdown links on hover */
-  .dropdown-content a:hover {
+}
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
-  .dropdown:hover .dropdown-content {
+}
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-
+}
 /* When the screen is less than 767 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 767px) {
     .topnav a:not(:first-child), .dropdown .dropbtn {display: none;}
@@ -230,10 +207,9 @@ hr {
       display: block;
       background-color: #ffffff;
     }
-  }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 767px) {
+}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 767px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -242,18 +218,18 @@ hr {
       background-color: #ffffff;
     }
     .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+        float: none;
+        display: block;
+        text-align: left;
     }
     .topnav.responsive .dropdown {float: none;}
     .topnav.responsive .dropdown-content {position: relative;}
     .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-  }
+            display: block;
+            width: 100%;
+            text-align: left;
+        }
+}
 .topnav i {
     font-size: 16px;
 }
@@ -263,9 +239,6 @@ hr {
 .nav {
     background-color: #c73535;
     padding: 10px;
-    /* position:sticky;
-    position:-webkit-sticky;
-    top: 0; */
 }
 @media only screen and (max-width:767px) {
     .nav {
@@ -273,9 +246,7 @@ hr {
     }
 }
 .nav .menu {
-    /* float: right; */
     text-align: center;
-    /* padding-top: 10px; */
 }
 .nav li {
     display: inline;
@@ -285,46 +256,26 @@ hr {
     margin: 0;
     padding: 0;
 }
-/* .nav a {
-    padding: 20px; */
-    /* color: #ffffff; */
-    /* display: block;
-} */
-/* .menu {
-    float:right;
-} */
 .menu-item a {
     color: #ffffff;
-    /* margin: 0px 20px; */
 }
 .hero {
-    /* min-height: 400px; */
     background-color: transparent;
     background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
         url("images/blog07-free-img.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    /* text-align: center; */
     padding: 100px 20px;
 }
 .hero h1, .hero h4, .hero p {
     color: #ffffff;
 }
-/* .main {
-    text-align:left;
-} */
 .section {
     padding: 20px;
 }
-/* .services {
-    padding: 20px;
-} */
 .clients {
     text-align: center;
 }
-/* .testimonials {
-    padding: 20px;
-} */
 .testimonials img {
     height: 80px;
     padding-top: 16px;
@@ -332,9 +283,6 @@ hr {
 .certifications {
     text-align: center;
 }
-/* .certifications img {
-    max-width: 260px;
-} */
 .contact {
     background-color: #c73535;
 }
@@ -381,6 +329,9 @@ i {
 }
 .center {
     text-align: center;
+}
+.center img {
+    max-width: 100%;
 }
 .left-align {
     margin-left:0;
@@ -460,4 +411,16 @@ i {
 ::selection {
     color: #ffffff;
     background: #c73535;
+}
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+  }
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
