--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ hr {
 .hero {
     background-color: transparent;
     background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
-        url("https://stm-2018.github.io/images/blog07-free-img.jpg");
+        url("https://sybilmayard.tech/images/blog07-free-img.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 100px 20px;
