--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,8 @@ hr {
 }
 @media screen and (max-width: 767px) {
     .hero {
-        background-image: url("https://sybilmayard.com/images/blog07-free-img-800x450.jpg");
+        background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
+        url("https://sybilmayard.com/images/blog07-free-img-800x450.jpg");
     }
 }
 .hero h1, .hero h4, .hero p {
