--- a/styles.css
+++ b/styles.css
@@ -561,4 +561,107 @@ i {
     src: url(https://sybilmayard.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-    
+.myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    width:100%;
+    max-width:200px;
+}
+.myImg:hover {opacity: 0.7;}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 20px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    max-height: 90%;
+}
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+/* Add Animation */
+.modal-content, #caption {  
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+    @keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.close:hover,
+.close:focus,
+[class^="arrow"]:hover,
+[class^="arrow"]:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+[class^="arrow"] {
+    color: #f1f1f1;
+    position: absolute;
+    top:50%;
+    font-size: 28px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.arrow-left {
+    left: 35px;
+}
+.arrow-right {
+    right: 35px;
+}
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 80%;
+    }
+    .modal {
+        padding-top: 100px;
+    }
+    .arrow-left, .arrow-right {
+        top: 33%;
+    }
+    .arrow-left {
+        left: 5px;
+    }
+    .arrow-right {
+        right: 5px;
+    }
+}
