--- a/styles.css
+++ b/styles.css
@@ -566,7 +566,8 @@ i {
     cursor: pointer;
     transition: 0.3s;
     width:100%;
-    max-width:200px;
+    max-width:180px;
+    padding-bottom: 20px;
 }
 .myImg:hover {opacity: 0.7;}
 /* The Modal (background) */
@@ -598,7 +599,7 @@ i {
     text-align: center;
     color: #ccc;
     padding: 10px 0;
-    height: 150px;
+    /* height: 150px; */
 }
 /* Add Animation */
 .modal-content, #caption {  
@@ -650,13 +651,16 @@ i {
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
-        width: 80%;
+        /* padding-left: 40px;
+        padding-right: 40px; */
+        max-height: none;
+        max-width: 80%;
     }
     .modal {
         padding-top: 100px;
     }
     .arrow-left, .arrow-right {
-        top: 33%;
+        top: 44%;
     }
     .arrow-left {
         left: 5px;
@@ -664,4 +668,13 @@ i {
     .arrow-right {
         right: 5px;
     }
+    .myImg {
+        margin:auto;
+    }
+}
+.design {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
