--- a/styles.css
+++ b/styles.css
@@ -263,7 +263,7 @@ hr {
 .hero {
     background-color: transparent;
     background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
-        url("https://sybilmayard.com/images/blog07-free-img.jpg");
+        url("https://sybiltec.com/images/blog07-free-img.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 100px 20px;
@@ -271,7 +271,7 @@ hr {
 @media screen and (max-width: 767px) {
     .hero {
         background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
-        url("https://sybilmayard.com/images/blog07-free-img-800x450.jpg");
+        url("https://sybiltec.com/images/blog07-free-img-800x450.jpg");
     }
 }
 .hero h1, .hero h4, .hero p {
@@ -486,7 +486,7 @@ i {
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWkU1Z4Y.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWkU1Z4Y.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   }
   /* cyrillic */
@@ -495,7 +495,7 @@ i {
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FU0U1Z4Y.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FU0U1Z4Y.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
   }
   /* hebrew */
@@ -504,7 +504,7 @@ i {
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FVUU1Z4Y.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FVUU1Z4Y.woff2) format('woff2');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
   }
   /* latin-ext */
@@ -513,7 +513,7 @@ i {
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWUU1Z4Y.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWUU1Z4Y.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -522,7 +522,7 @@ i {
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FV0U1.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FV0U1.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 /* hebrew */
@@ -531,7 +531,7 @@ i {
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfpcuPP9g.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfpcuPP9g.woff2) format('woff2');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
   }
   /* vietnamese */
@@ -540,7 +540,7 @@ i {
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqMuPP9g.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqMuPP9g.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
   }
   /* latin-ext */
@@ -549,7 +549,7 @@ i {
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqcuPP9g.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqcuPP9g.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -558,7 +558,7 @@ i {
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://sybilmayard.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
+    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 .myImg {
