--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,13 @@ hr {
 .hero h1, .hero h4, .hero p {
     color: #ffffff;
 }
+.hero img {
+    border-radius: 500px;
+    border: 8px solid #D5BB32;
+    width: 350px;
+    max-width: 100%;
+    filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.25));
+}
 .section {
     padding: 20px;
 }
