--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,6 @@ hr {
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    /* float:right; */
     display: block;
     color: #791E89;
     text-align: center;
@@ -163,8 +162,11 @@ hr {
 }
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    /* background-color: #ddd;
+    color: black; */
+    /* font-weight: 700; */
+    /* text-decoration: underline; */
+    color:#000000;
 }
 /* Add an active class to highlight the current page */
 /* .topnav a.active {
@@ -190,7 +192,7 @@ hr {
     font-size: 16px;
     border: none;
     outline: none;
-    color: white;
+    color: #791E89;
     padding: 10px 16px;
     background-color: inherit;
     font-family: 'Lato', sans-serif;
@@ -208,30 +210,32 @@ hr {
 /* Style the links inside the dropdown */
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #791E89;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 /* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover, .dropdown:hover .dropbtn {
+/* .topnav a:hover, .dropdown:hover .dropbtn {
     background-color: #791E89;
     color: white;
-}
+} */
 /* Add a grey background to dropdown links on hover */
-.dropdown-content a:hover {
+/* .dropdown-content a:hover {
     background-color: #ddd;
     color: black;
-}
+} */
 /* Show the dropdown menu when the user moves the mouse over the dropdown button */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+@media screen and (min-width: 600px) {
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+  }
 /* When the screen is less than 767 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 767px) {
     .topnav a:not(:first-child), .dropdown .dropbtn {display: none;}
-    /* .topnav a, .dropdown .dropbtn {display: none;} */
+    .topnav a, .dropdown .dropbtn {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
@@ -260,14 +264,20 @@ hr {
             text-align: left;
         }
 }
-.topnav i {
+/* .topnav i {
+    font-size: 16px;
+    color:#ffffff;
+} */
+.topnav .fa-solid.fa-angle-down {
+    font-size: 16px;
+    color:#791E89;
+    padding-left: 6px;
+}
+.topnav .fas.fa-bars {
     font-size: 16px;
     color:#ffffff;
 }
-.topnav .fas.fa-caret-down {
-    color:#ffffff;
-}
-
+.show {display: block;}
 .nav {
     /* background-color: #791E89; */
     padding: 10px;
