--- a/styles.css
+++ b/styles.css
@@ -303,16 +303,14 @@ hr {
 }
 .hero {
     background-color: transparent;
-    background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)),
-        url("https://sybiltec.com/images/blog07-free-img.jpg");
+    background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
     background-size: cover;
     background-repeat: no-repeat;
     padding: 100px 20px;
 }
 @media screen and (max-width: 767px) {
     .hero {
-        background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)),
-        url("https://sybiltec.com/images/blog07-free-img-800x450.jpg");
+        background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
     }
 }
 .hero h1, .hero h4, .hero p {
