--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@
 * {
     box-sizing: border-box;
 }
+/* iframe styling */
+body {
+    margin: 0;
+}
+iframe {
+    border-width: 0px;
+    width: 100%;
+    height: 1200px;
+}
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
@@ -306,7 +315,7 @@ hr {
     background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 100px 20px;
+    padding: 50px 20px;
 }
 @media screen and (max-width: 767px) {
     .hero {
