--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,7 @@ hr {
 @media screen and (max-width: 767px) {
     .hero {
         background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
+        padding: 20px;
     }
 }
 .hero h1, .hero h4, .hero p {
