--- a/styles.css
+++ b/styles.css
@@ -843,3 +843,7 @@ q {font-style: italic;}
     from {opacity: .4}
     to {opacity: 1}
   }
+.screenshot {
+    max-width: 100%;
+    padding: 20px 0px;
+}
