--- a/styles2.css
+++ b/styles2.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -954,4 +955,13 @@ q {font-style: italic;}
 }
 .right-align {
     float: right;
+}
+.customer {
+    font-weight: 700;
+}
+.blog-title {
+    font-weight: 700;
+    font-size: 20px;
+    text-decoration: none;
+    color:#000000;
 }
