--- a/styles-old.css
+++ b/styles-old.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -45,7 +44,7 @@ iframe {
     max-width: 100%;
 }
 .row {
-    padding: 10px 0px 10px 0px;
+    padding: 30px 0px 20px 0px;
 }
 .row::after, .row-2::after {
     content: "";
@@ -63,7 +62,7 @@ html {
 body {
     margin: 0;
 }
-h1, h2, h3, h4, h5, h6, a, p, q, li, #caption, .breadcrumb, span {
+h1, h2, h3, h4, h5, h6, a, p, q, li, #caption, .breadcrumb {
     font-family: 'Lato', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -73,7 +72,7 @@ a, p, q, li {
     font-weight: 400;
 }
 h1 {
-    font-size: 48px;
+    font-size: 60px;
 }
 @media only screen and (max-width: 767px) {
     h1 {
@@ -81,7 +80,7 @@ h1 {
     } 
 }
 h2 {
-    font-size: 30px;
+    font-size: 36px;
 }
 @media only screen and (max-width: 767px) {
     h2 {
@@ -89,7 +88,7 @@ h2 {
     }
 }
 h3 {
-    font-size: 18px;
+    font-size: 24px;
 }
 @media only screen and (max-width: 767px) {
     h3 {
@@ -128,9 +127,6 @@ hr {
 .container-700 {
     max-width: 700px;
     margin:auto;
-}
-.header {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px;
 }
 .header .logo {
     text-align: left;
@@ -309,45 +305,38 @@ hr {
     color: #ffffff;
 }
 .hero {
-    /* background-color: transparent; */
-    /* background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)); */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
+    background-color: transparent;
+    background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 50px 20px;
 }
 @media screen and (max-width: 767px) {
     .hero {
-        /* background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)); */
+        background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
         padding: 20px;
     }
 }
-.hero h1, .hero h2, .hero h4, .hero p {
-    color: #000000;
+.hero h1, .hero h4, .hero p {
+    color: #ffffff;
 }
 .hero h2 {
-    font-size: 20px;
+    color:#ffffff;
+    font-size: 18px;
 }
-.hero h3 {
-    font-size: 16px;
-    font-weight: 700;
-}
-/* .hero img {
+.hero img {
     border-radius: 500px;
     border: 8px solid #D5BB32;
     width: 250px;
     max-width: 100%;
     filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.25));
-} */
-.hero i {
-    padding: 0 10px;
-    font-size: 18px;
 }
 .section {
     padding: 20px;
 }
 .clients {
     text-align: center;
-    /* background: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)); */
+    background: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
 }
 .clients video {
     filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.25));
@@ -361,13 +350,6 @@ hr {
 .testimonials img {
     height: 80px;
     padding-top: 16px;
-}
-.testimonial-card {
-    text-align: center;
-    background-color: #f6f6f6;
-    margin: 0px 5px;
-    padding: 30px;
-    border-radius: 6px;
 }
 .certifications {
     text-align: center;
@@ -445,7 +427,7 @@ hr {
 }
 i {
     color:#791E89;
-    font-size: 32px;
+    font-size: 40px;
 }
 .smalli {
     font-size: 18px;
@@ -502,34 +484,31 @@ i {
     color: #ffffff;
 }
 .btn-secondary {
-    font-weight: 700;
-    color: #000000;
+    border: 1px solid #D5BB32;
+    background-color: #D5BB32;
+    color:#000000;
+    padding: 15px 40px;
+    border-radius: 6px;
     text-decoration: none;
+    margin-top: 30px;
+    text-align: center;
 }
 .btn-secondary:hover {
+    background-color: #000000;
+    color: #ffffff;
 }
 @media only screen and (max-width: 479px) {
-    .btn-cnt, .btn-primary, .btn-contact {    
+    .btn-cnt, .btn-primary, .btn-secondary, .btn-contact {    
         margin-top: 0px;
         width: 100%;
         display: block;
-    }
-    .btn-secondary {
     }
 }
 .padding-bottom {
     padding-bottom: 30px;
 }
 .padding-top {
-    padding-top: 20px;
-}
-@media only screen and (max-width: 768px) {
-    .padding-bottom {
-        padding-bottom: 20px;
-    }
-    .padding-top {
-        padding-top: 20px;
-    }
+    padding-top: 30px;
 }
 .padding-btn {
     padding-top: 30px;
@@ -711,22 +690,21 @@ i {
 }
 .offer-card {
     padding: 30px;
-    box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
-    background-color: #ffffff;
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.13);
+    border-radius: 12px;
 }
 .blog-card {
-    box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.13);
+    border-radius: 12px;
 }
 .blog-card img {
-    border-radius: 6px 6px 0 0;
+    border-radius: 12px 12px 0 0;
 }
 .blog-card-text {
     padding: 30px;
 }
 .offer-card:hover, .blog-card:hover {
-    box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.25);
     transition: box-shadow 1s;
 }
 .partners img {
@@ -874,23 +852,13 @@ q {font-style: italic;}
 }
 .announcement-bar {
     background-color: #000000;
-    text-align: right;
-    padding: 10px 80px;
+    text-align: center;
+    padding: 10px 20px;
 }
-.announcement-bar a, .announcement-bar span, .announcement-bar i {
+.announcement-bar a {
     color: #ffffff;
     text-decoration: none;
     font-size: 14px;
-    font-weight: 700;
-}
-.announcement-bar i {
-    padding: 0 10px;
-}
-@media only screen and (max-width: 768px) {
-    .announcement-bar {
-        text-align: center;
-        padding: 10px 20px;
-    }
 }
 /* Logo carousel */
 @keyframes slide {
@@ -960,16 +928,4 @@ q {font-style: italic;}
 .breadcrumb li {
     display: inline-block;
     font-size: 14px;
-}
-.right-align {
-    float: right;
-}
-.customer {
-    font-weight: 700;
-}
-.blog-title {
-    font-weight: 700;
-    font-size: 20px;
-    text-decoration: none;
-    color:#000000;
 }
